load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "example",
    srcs = [
        "example.cpp",
    ],
    deps = [
        "//src/platform/glfw",
        "//src/renderer/opengl3",
        "//src/gl3w",
        "//src/imgui",
        "@glfw//:glfw",
    ],
    defines = [
        "IMGUI_IMPL_OPENGL_LOADER_GL3W",
    ],
		visibility = [
        "//:__pkg__",
    ],
)

cc_binary(
    name = "buttonbox_glfw",
    srcs = [
        "buttonbox_glfw.cpp",
    ],
    deps = [
        "//src/platform/glfw",
        "//src/renderer/opengl3",
        "//src/gl3w",
        "//src/imgui",
        "@glfw//:glfw",
    ],
    defines = [
        "IMGUI_IMPL_OPENGL_LOADER_GL3W",
        "GLFW_EXPOSE_NATIVE_WIN32",
    ],
		visibility = [
        "//:__pkg__",
    ],
)

#d3d11.lib
#d3dcompiler.lib
cc_binary(
    name = "buttonbox",
    srcs = [
        "buttonbox/buttonbox.cpp",
        "buttonbox/buttonbox.h",
    ],
    deps = [
        "//src/imgui",
        "//src/platform/win32",
        "//src/renderer/directx11",
    ],
    defines = [
            "UNICODE",
            "_UNICODE",
    ],
		visibility = [
        "//:__pkg__",
    ],
)
