load("@rules_cc//cc:defs.bzl", "cc_library")

LINUX_LINKOPTS = [
    "-ldl",
    "-lGL",
]

WIN32_LINKOPTS = [
    "-DEFAULTLIB:opengl32.lib",
]

cc_library(
    name = "gl3w",
    srcs = [
        "gl3w.c",
    ],
    hdrs = [
        "gl3w.h",
        "glcorearb.h",
    ],
    visibility = [
        "//cmd:__pkg__",
        "//src/renderer/opengl3:__pkg__",
    ],
    linkopts = select({
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_LINKOPTS,
        "@bazel_tools//src/conditions:windows": WIN32_LINKOPTS,
    }),
)
